--- a/styles/style.css
+++ b/styles/style.css
@@ -436,3 +436,24 @@ dialog::backdrop {
 .sparks {
   opacity: 0;
 }
+
+@media (width <= 375px) {
+  .page {
+    max-inline-size: 100%;
+  }
+
+  .text-section {
+    min-height: 329px;
+  }
+
+  .icon-floppy {
+    width: 28px;
+    height: 28px;
+  }
+
+  .save-button {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
