--- a/styles/themes.css
+++ b/styles/themes.css
@@ -8,30 +8,19 @@
 :root.theme-dark {
   --background-color: #000000;
   --main-color: #00cc14;
-  --accent-border-color: #00cc14;
+  --content-border-color: #00cc14;
   --background-gradient: 
     repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
     repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
     linear-gradient(#007f0c, #004306);
   --text-button-color: #00cc14;
   --sparcle-heart: #FF0000;
+  --main-font-weight: 465;
+  --accent-font-weight: 785;
 }
 
- 
-:root.theme-dark .header,
-:root.theme-dark .card,
-:root.theme-dark .card__like-button,
-:root.theme-dark .save-button,
-:root.theme-dark .dialog-window,
-:root.theme-dark .close-button {
-        border: var(--content-border-size) solid var(--accent-border-color);
-}
-
-:root.theme-dark .card-title,
-:root.theme-dark .image {
-        border-bottom: var(--content-border-size) solid var(--accent-border-color);
-}
 /*  */
+
 :root.theme-light {
   --background-color: #ffffff;
   --main-color: #000000;
@@ -42,73 +31,24 @@
     repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
     repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
     linear-gradient(#e7e7e7 0.01%, #1a1a1a);
-}
-:root.theme-light .header,
-:root.theme-light .card,
-:root.theme-light .card__like-button,
-:root.theme-light .save-button,
-:root.theme-light .dialog-window,
-:root.theme-light .close-button {
-        border: var(--content-border-size) solid var(--content-border-color);
-}
+  --accent-font-weight: 700;
+  --main-font-weight: 400;
+  }
 
-:root.theme-light .card-title,
-:root.theme-light .image {
-        border-bottom: var(--content-border-size) solid var(--content-border-color);
-}
 /*  */
-@media (prefers-color-scheme: light) {
-  :root {
-    --background-color: #ffffff;
-    --main-color: #000000;
-    --content-border-color: #000000;
-    --text-button-color: #ffffff;
-    --sparcle-heart: #FF0000;
-    --background-gradient: 
-    repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
-    repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
-    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
-  }
 
-    .header,
-    .card,
-    .card__like-button,
-    .save-button,
-    .dialog-window,
-    .close-button {
-        border: var(--content-border-size) solid var(--content-border-color);
-  }
-
-    .card-title,
-    .image {
-        border-bottom: var(--content-border-size) solid var(--content-border-color);
-  }
-}
-/*  */
 @media (prefers-color-scheme: dark) {
   :root {
     --background-color: #000000;
     --main-color: #00cc14;
-    --accent-border-color: #00cc14;
+    --content-border-color: #00cc14;
     --text-button-color: #00cc14;
     --sparcle-heart: #FF0000;
     --background-gradient: 
     repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
     repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
     linear-gradient(#007f0c, #004306);
-  }
-
-    .header,
-    .card,
-    .card__like-button,
-    .save-button,
-    .dialog-window,
-    .close-button {
-        border: var(--content-border-size) solid var(--accent-border-color);
-  }
-
-    .card-title,
-    .image {
-        border-bottom: var(--content-border-size) solid var(--accent-border-color);
+    --main-font-weight: 465;
+    --accent-font-weight: 785;
   }
 }
