--- a/styles/animations.css
+++ b/styles/animations.css
@@ -42,11 +42,16 @@
     transition: fill 0.3s linear;
  }
 
- .like-icon:active .core,
+ .like-icon:active .core {
+    fill: var(--sparcle-heart);
+    transition: fill 0.3s linear;
+ }
+
  .like-icon:active .main-body {
     fill: var(--sparcle-heart);
     transition: fill 0.3s linear 0.05s;
  }
+
 /* active like klick */
  .like-icon.is-liked .core {
     fill: var(--sparcle-heart);
