--- a/styles/style.css
+++ b/styles/style.css
@@ -376,8 +376,8 @@ dialog::backdrop {
 }
 
 .dialog-header {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto 1fr;
   gap: 20px;
 }
 
