--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,9 +1,8 @@
-/* В этом файле вы опишете значения переменных в разных цветовых схемах.
-Придерживайтесь такого именования классов:
-✦ theme-dark — класс тёмной темы
-✦ theme-light — класс светлой темы
-✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
-*/
+/* 
+✦ theme-dark — class for the dark theme
+✦ theme-light — class for the light theme
+*/ 
+
 
 :root.theme-dark {
   --background-color: #000000;
